tests/neg-custom-args/captures/i21920.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i21920.scala:34:35 ---------------------------------------
34 |  val cell: Cell[File] = File.open(f => Cell(() => Seq(f))) // error
   |                                   ^^^^^^^^^^^^^^^^^^^^^^^
   |                   Found:    (f: File^?) ->? box Cell[box File^?]{val head: () ->? IterableOnce[box File^?]^?}^?
   |                   Required: (f: File^) => box Cell[box File^?]{val head: () ->? IterableOnce[box File^?]^?}^?
   |
   |                   where:    => refers to a fresh root capability created in value cell
   |                             ^  refers to the universal root capability
   |
   |
   |                   Note that the universal capability `cap`
   |                   cannot be included in capture set ?
   |
   | longer explanation available when compiling with `-explain`
